clusters/k3s/apps/system/portainer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer
  namespace: docker-services
subsets:
- addresses:
  - ip: 192.168.1.40
  ports:
  - port: 9000
---
