clusters/k3s/apps/system/portainer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: docker-services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - portainer.erwanleboucher.dev
    secretName: portainer-tls
  rules:
  - host: portainer.erwanleboucher.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
